--- a/babylon/templates/layout.html
+++ b/babylon/templates/layout.html
@@ -30,8 +30,12 @@
               </div>
               <!-- Lado direito -->	
               <div class="navbar-nav">
-                <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('register_booking') }}">Reservar</a>
-                <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('login') }}">Login</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('register_booking') }}">Reservar</a>
+                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('logout') }}">Logout</a>
+                {% else %}
+                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('login') }}">Login</a>
+                {% endif %}
               </div>
             </div>
           </div>
