--- a/babylon/templates/login.html
+++ b/babylon/templates/login.html
@@ -7,17 +7,17 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Login</legend>
                 <div class="form-group">
-                    {{ form.user.label(class="form-control-label") }}
+                    {{ form.username.label(class="form-control-label") }}
 
-                    {% if form.user.errors %}
-                        {{ form.user(class="form-control form-control-lg is-invalid") }}
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
-                            {% for error in form.user.errors %}
+                            {% for error in form.username.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.user(class="form-control form-control-lg") }}
+                        {{ form.username(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
