--- a/babylon/templates/register_booking.html
+++ b/babylon/templates/register_booking.html
@@ -17,7 +17,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.client(class="form-control form-control-lg", placeholder="Nome Completo") }}
+                        {{ form.client(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <!-- Quantidade de Pessoas -->
