--- a/babylon/templates/layout.html
+++ b/babylon/templates/layout.html
@@ -31,10 +31,10 @@
               <!-- Lado direito -->	
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('register_booking') }}">Reservar</a>
-                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('logout') }}">Logout</a>
+                  <span class="nav-item nav-link" >Olá, <b>{{ current_user.employee.name.upper().split(' ')[0] }}</b></span>
+                  <a class="nav-item nav-link border border rounded ml-2 px-2" href="{{ url_for('logout') }}"><strong>Logout</strong></a>
                 {% else %}
-                  <a class="nav-item nav-link" style="text-decoration: none; color: #ffffff" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 {% endif %}
               </div>
             </div>
@@ -57,23 +57,47 @@
             {% endwith %}
             {% block content %}{% endblock content %}
         </div>
-        <!-- <div class="col-md-4">
+        {% if current_user.is_authenticated %}
+        <div class="col-md-4">
           <div class="content-section">
-            <h3>Barra lateral</h3>
-            <p class='text-muted'>Tudo bootstrap por enquanto.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Ultimos Noticias</li>
-                <li class="list-group-item list-group-item-light">Anúncios</li>
-                <li class="list-group-item list-group-item-light">Calendarios</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+            <h3><strike style="font-size: 10px">Finge que é um</strike> Menu</h3>
+            <p class='text-muted' style="font-size: 10px">AGORA ESSA BARRA FUNFAAAAAA
+                {% if  current_user.is_authenticated and current_user.employee.role == 'Admin' %}
+                <li class="list-group-item list-group-item-light">
+                    <a style="text-decoration: none; color: #818182" href="{{ url_for('home') }}">
+                      Listar Funcionários
+                    </a>
+                </li>
+                {% endif %}
+                <li class="list-group-item list-group-item-light">
+                    <a style="text-decoration: none; color: #818182" href="{{ url_for('register_client') }}">
+                      Registrar Novo Cliente
+                    </a>
+                </li>
+                <li class="list-group-item list-group-item-light">
+                    <a style="text-decoration: none; color: #818182" href="{{ url_for('search_client') }}">
+                      Buscar Cliente
+                    </a>
+                </li>
+                <li class="list-group-item list-group-item-light">
+                    <a style="text-decoration: none; color: #818182" href="{{ url_for('list_clients') }}">
+                      Listar Clientes
+                    </a>
+                </li>
+                <li class="list-group-item list-group-item-light">
+                    <a style="text-decoration: none; color: #818182" href="{{ url_for('register_booking') }}">
+                      Reservar
+                    </a>
+                </li>
               </ul>
             </p>
           </div>
-        </div> -->
+        </div>
       </div>
+      {% endif %}
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </body>
