--- a/babylon/templates/clients.html
+++ b/babylon/templates/clients.html
@@ -22,9 +22,9 @@
         {% for page_num in clients.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
               {% if clients.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('list_clients', page=page_num) }}">{{ page_num }}</a>
+                <a class="btn btn-info mb-4" href="{{ url_for('clients', page=page_num) }}">{{ page_num }}</a>
               {% else %}
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('list_clients', page=page_num) }}">{{ page_num }}</a>
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('clients', page=page_num) }}">{{ page_num }}</a>
               {% endif %}
             {% else %}
               <span class="btn btn-outline-info mb-4">...</span>
